--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
     "@types/express": "4.17.13",
     "@types/express-graphql": "0.9.0",
     "@types/graphql": "14.5.0",
+    "@types/node-schedule": "^1.3.2",
     "@types/sqlite3": "3.1.8",
     "dotenv": "10.0.0",
     "esbuild": "0.14.9",
@@ -23,6 +24,7 @@
     "express": "4.17.2",
     "express-graphql": "0.12.0",
     "graphql": "16.2.0",
+    "node-schedule": "^2.1.0",
     "sqlite3": "5.0.2"
   }
 }
